--- a/package.json
+++ b/package.json
@@ -1,21 +1,26 @@
 {
-  "name": "test",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "@sentry/node": "^8.47.0",
-    "@sentry/profiling-node": "^8.47.0",
-    "aws-sdk": "^2.1000.0",
-    "dotenv": "^10.0.0",
-    "express": "4.17.1",
-    "libphonenumber-js": "1.10.12",
-    "mongoose": "^8.9.2"
-  }
+	"name": "test",
+	"version": "1.0.0",
+	"description": "",
+	"main": "index.js",
+	"scripts": {
+		"dev": "nodemon -L ./server.js",
+		"test": "echo \"Error: no test specified\" && exit 1"
+	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"dependencies": {
+		"@aws-sdk/client-s3": "^3.723.0",
+		"@sentry/node": "^8.47.0",
+		"@sentry/profiling-node": "^8.47.0",
+		"aws-sdk": "^2.1000.0",
+		"dotenv": "^10.0.0",
+		"express": "4.17.1",
+		"libphonenumber-js": "1.10.12",
+		"mongoose": "^8.9.2",
+		"multer": "^1.4.5-lts.1",
+		"multer-s3-transform": "^2.10.3",
+		"nodemon": "^3.1.9"
+	}
 }
